--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vue-custom-element": "^3.2.14",
+    "vuetify": "^2.2.11",
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
